Update 3 html files and add 1 image
3 html files: index, contact, about
1 image: my_dogs.jpg

--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>Elsha E. Kwee</title>
+</head>
+<body>
+	<nav>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about.html">About</a></li>
+			<li><a href="contact.html">Contact</a></li>
+		</ul>
+	</nav>
+	<h1>Elsha Eliasa Kwee</h1>
+	<p></p>
+	<footer>Inspiration from <a href="http://www.hexahedria.com/">hexahedria</a></footer>
+</body>
+</html>
