Update html files index, about, contact

--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
 	<div>
 		<h1>About</h1>
 		<p>Hi, my name is Elsha Eliasa Kwee, and I'm currently a student at Dev Bootcamp. I'm from Jakarta, Indonesia, and have also spent some time living in Singapore, Seattle, and Osaka.</p>
+		<p>I'm interested in ceramics, LEGO, and cryptocurrency (although I have little understanding on the topic).</p>
 		<p>I'll be using this site to document the projects that I'll be working on during my time at DBC.</p>
 	</div>
 	<nav>
