--- a/contact.html
+++ b/contact.html
@@ -13,22 +13,22 @@
 	</nav>
 	<h1>Contact</h1>
 	<form name="Message form GitHub page" action="https://httpbin.org/post" method="post">
-		<!--<fieldset> this tag created a box-->
-		<div>
-      <label>Full Name:</label>
-      <input type="text" name="fullname">
-    </div>
-    <div>
-      <label>Email:</label>
-      <input type="email" name="sender-email">
-    </div>
-    <div>
-       <label>Message:</label>
-       <textarea name="message" rows="10" cols="50"></textarea>
-    </div>
-    <button type="submit">Send message</button>
+		<fieldset>
+			<div>
+	      <label>Full Name:</label>
+	      <input type="text" name="fullname">
+	    </div>
+	    <div>
+	      <label>Email:</label>
+	      <input type="email" name="sender-email">
+	    </div>
+	    <div>
+	       <label>Message:</label>
+	       <textarea name="message" rows="10" cols="50"></textarea>
+	    </div>
+		</fieldset>
+		<button type="submit">Send message</button>
     <button type="reset">Reset</button>
-		<!--</fieldset>-->
 	</form>
 </body>
 </html>
