--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
 	</nav>
-	<h1>Elsha Eliasa Kwee</h1>
-	<p></p>
-	<footer>Inspiration from <a href="http://www.hexahedria.com/">hexahedria</a></footer>
+	<div>
+		<h1>Elsha Eliasa Kwee</h1>
+		<p>I had recently left my position as an Associate at <a href="https://www.cyberagentventures.com/en/">CyberAgent Ventures</a> to start a new journey at <a href="https://devbootcamp.com/">Dev Bootcamp</a>.</p>
+		<p>This site is created as part of the learning process during Week 2 at DBC.</p>
+	</div>
+	<footer>Inspired by <a href="http://www.hexahedria.com/">hexahedria</a></footer>
 </body>
 </html>
