Add styles.css and update all 3 html files with css link

--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 	<title>Contact &middot; Elsha E. Kwee</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 	<nav>
