--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<title>Elsha E. Kwee</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 	<nav>
