Update styles.css and minor update to index, about, contact files

--- a/index.html
+++ b/index.html
@@ -5,18 +5,22 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-	<nav>
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="about.html">About</a></li>
-			<li><a href="contact.html">Contact</a></li>
-		</ul>
-	</nav>
-	<div>
-		<h1>Elsha Eliasa Kwee</h1>
+	<header>
+		<nav>
+			<ul>
+				<li class="bannerlist"><a class="topnavlink" href="index.html">Home</a></li
+				><li class="bannerlist"><a class="topnavlink" href="about.html">About</a></li
+				><li class="bannerlist"><a class="topnavlink" href="contact.html">Contact</a></li>
+			</ul>
+		</nav>
+		<h1>Elsha E. Kwee</h1>
+	</header>
+	
+	<main>
 		<p>I had recently left my position as an Associate at <a href="https://www.cyberagentventures.com/en/">CyberAgent Ventures</a> to start a new journey at <a href="https://devbootcamp.com/">Dev Bootcamp</a>.</p>
 		<p>This site is created as part of the learning process during Week 2 at DBC.</p>
-	</div>
-	<footer>Inspired by <a href="http://www.hexahedria.com/">hexahedria</a></footer>
+	</main>
+	<footer><a href="http://www.hexahedria.com/">Here</a> is a website with a similar topic/purpose. It definitely looks a lot better in terms of design and layout, considering this page only has HTML.
+	</footer>
 </body>
 </html>
