--- a/about.html
+++ b/about.html
@@ -5,29 +5,32 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-	<nav>
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="about.html">About</a></li>
-			<li><a href="contact.html">Contact</a></li>
-		</ul>
-	</nav>
-	<div>
-		<img src="my_dogs.jpg" alt="my dogs">
-		<p>Here is a lovely picture of my dogs!</p>
-	</div>
-	<div>
+	<header>
+		<nav>
+			<ul>
+				<li class="bannerlist"><a class="topnavlink" href="index.html">Home</a></li
+				><li class="bannerlist"><a class="topnavlink" href="about.html">About</a></li
+				><li class="bannerlist"><a class="topnavlink" href="contact.html">Contact</a></li>
+			</ul>
+		</nav>
 		<h1>About</h1>
+	</header>
+	
+	<main>
+		<img src="my_dogs.jpg" alt="my dogs">
+		<figcaption>Here is a lovely picture of my dogs!</figcaption>
 		<p>Hi, my name is Elsha Eliasa Kwee, and I'm currently a student at Dev Bootcamp. I'm from Jakarta, Indonesia, and have also spent some time living in Singapore, Seattle, and Osaka.</p>
 		<p>I'm interested in ceramics, LEGO, and cryptocurrency (although I have little understanding on the topic).</p>
 		<p>I'll be using this site to document the projects that I'll be working on during my time at DBC.</p>
-	</div>
-	<nav>
-		<ul>
-			<li><a href="https://www.linkedin.com/in/elshakwee/">Linkedin</a></li>
-			<li><a href="https://github.com/elshaek">GitHub</a></li>
-			<li><a href="https://www.facebook.com/elsha">Facebook</a></li>
-		</ul>
-	</nav>
+	</main>
+	<footer>
+		<nav id="footernav">
+			<ul>
+				<li><a class="bottomnavlink" href="https://www.linkedin.com/in/elshakwee/">Linkedin</a></li
+				><li><a class="bottomnavlink" href="https://github.com/elshaek">GitHub</a></li
+				><li><a class="bottomnavlink" href="https://www.facebook.com/elsha">Facebook</a></li>
+			</ul>
+		</nav>
+	</footer>
 </body>
 </html>
