Update styles.css and index about contact pages

--- a/index.html
+++ b/index.html
@@ -6,21 +6,32 @@
 </head>
 <body>
 	<header>
-		<nav>
+		<nav id="bannernav">
 			<ul>
-				<li class="bannerlist"><a class="topnavlink" href="index.html">Home</a></li
-				><li class="bannerlist"><a class="topnavlink" href="about.html">About</a></li
-				><li class="bannerlist"><a class="topnavlink" href="contact.html">Contact</a></li>
+				<li class="bannerlist"><a class="bannerlink" href="index.html">Home</a></li
+				><li class="bannerlist"><a class="bannerlink" href="about.html">About</a></li
+				><li class="bannerlist"><a class="bannerlink" href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
 		<h1>Elsha E. Kwee</h1>
 	</header>
 	
 	<main>
-		<p>I had recently left my position as an Associate at <a href="https://www.cyberagentventures.com/en/">CyberAgent Ventures</a> to start a new journey at <a href="https://devbootcamp.com/">Dev Bootcamp</a>.</p>
-		<p>This site is created as part of the learning process during Week 2 at DBC.</p>
+		<div id="main-content">
+			<p>I had recently left my position as an Associate at <a href="https://www.cyberagentventures.com/en/">CyberAgent Ventures</a> to start a new journey at <a href="https://devbootcamp.com/">Dev Bootcamp</a>.</p>
+			<p>This site is created as part of the learning process during Week 2 and Week 3 at DBC.</p>
+			<p><a href="http://www.hexahedria.com/">Here</a> is a website with a similar topic/purpose. It definitely looks a lot better in terms of design and layout, considering this page only has HTML.</p>
+		</div>
+		<aside>
+			<nav id="socialnav">
+				<ul>
+					<li class="social-list"><a class="social-links" href="https://www.linkedin.com/in/elshakwee/">Linkedin</a></li
+					><li class="social-list"><a class="social-links" href="https://github.com/elshaek">GitHub</a></li
+					><li class="social-list"><a class="social-links" href="https://www.facebook.com/elsha">Facebook</a></li>
+				</ul>
+			</nav>
+		</aside>
 	</main>
-	<footer><a href="http://www.hexahedria.com/">Here</a> is a website with a similar topic/purpose. It definitely looks a lot better in terms of design and layout, considering this page only has HTML.
-	</footer>
+	<footer><a href="#top" title="back to top">Top</a></footer>
 </body>
 </html>
