--- a/about.html
+++ b/about.html
@@ -6,31 +6,36 @@
 </head>
 <body>
 	<header>
-		<nav>
+		<nav id="bannernav">
 			<ul>
-				<li class="bannerlist"><a class="topnavlink" href="index.html">Home</a></li
-				><li class="bannerlist"><a class="topnavlink" href="about.html">About</a></li
-				><li class="bannerlist"><a class="topnavlink" href="contact.html">Contact</a></li>
+				<li class="bannerlist"><a class="bannerlink" href="index.html">Home</a></li
+				><li class="bannerlist"><a class="bannerlink" href="about.html">About</a></li
+				><li class="bannerlist"><a class="bannerlink" href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
 		<h1>About</h1>
 	</header>
 	
 	<main>
-		<img src="my_dogs.jpg" alt="my dogs">
-		<figcaption>Here is a lovely picture of my dogs!</figcaption>
-		<p>Hi, my name is Elsha Eliasa Kwee, and I'm currently a student at Dev Bootcamp. I'm from Jakarta, Indonesia, and have also spent some time living in Singapore, Seattle, and Osaka.</p>
-		<p>I'm interested in ceramics, LEGO, and cryptocurrency (although I have little understanding on the topic).</p>
-		<p>I'll be using this site to document the projects that I'll be working on during my time at DBC.</p>
+		<div id="main-content">
+			<figure>
+				<img src="my_dogs.jpg" alt="my dogs" height="300" width="300">
+				<figcaption>Here is a lovely picture of my dogs!</figcaption>
+			</figure>
+			<p>Hi, my name is Elsha Eliasa Kwee, and I'm currently a student at Dev Bootcamp. I'm from Jakarta, Indonesia, and have also spent some time living in Singapore, Seattle, and Osaka.</p>
+			<p>I'm interested in ceramics, LEGO, and cryptocurrency (although I have little understanding on the topic).</p>
+			<p>I'll be using this site to document the projects that I'll be working on during my time at DBC.</p>
+		</div>
+		<aside>
+			<nav id="socialnav">
+				<ul>
+					<li class="social-list"><a class="social-links" href="https://www.linkedin.com/in/elshakwee/">Linkedin</a></li
+					><li class="social-list"><a class="social-links" href="https://github.com/elshaek">GitHub</a></li
+					><li class="social-list"><a class="social-links" href="https://www.facebook.com/elsha">Facebook</a></li>
+				</ul>
+			</nav>
+		</aside>
 	</main>
-	<footer>
-		<nav id="footernav">
-			<ul>
-				<li><a class="bottomnavlink" href="https://www.linkedin.com/in/elshakwee/">Linkedin</a></li
-				><li><a class="bottomnavlink" href="https://github.com/elshaek">GitHub</a></li
-				><li><a class="bottomnavlink" href="https://www.facebook.com/elsha">Facebook</a></li>
-			</ul>
-		</nav>
-	</footer>
+	<footer><a href="#top" title="ba to top">Top</a></footer>
 </body>
 </html>
