--- a/contact.html
+++ b/contact.html
@@ -6,31 +6,33 @@
 </head>
 <body>
 	<header>
-		<nav>
+		<nav id="bannernav">
 			<ul>
-				<li class="bannerlist"><a class="topnavlink" href="index.html">Home</a></li
-				><li class="bannerlist"><a class="topnavlink" href="about.html">About</a></li
-				><li class="bannerlist"><a class="topnavlink" href="contact.html">Contact</a></li>
+				<li class="bannerlist"><a class="bannerlink" href="index.html">Home</a></li
+				><li class="bannerlist"><a class="bannerlink" href="about.html">About</a></li
+				><li class="bannerlist"><a class="bannerlink" href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
 		<h1>Contact</h1>
 	</header>
-	
-	<form name="Message form GitHub page" action="https://httpbin.org/post" method="post">
-		<div>
-			<label>Full Name:</label>
-		    <input type="text" name="fullname">
-		</div>
-		<div>
-		  	<label>Email:</label>
-		    <input type="email" name="sender-email">
-		</div>
-		<div>
-		    <label>Message:</label>
-		    <textarea name="message" rows="10" cols="50"></textarea>
-		</div>
-		<button type="submit">Send message</button>
-    	<button type="reset">Reset</button>
-	</form>
+	<main>
+		<form  id="main-content" name="Message form GitHub page" action="https://httpbin.org/post" method="post">
+			<div class="form-input">
+				<label>Full Name:</label>
+			    <input type="text" name="fullname">
+			</div>
+			<div class="form-input">
+			  	<label>Email:</label>
+			    <input type="email" name="sender-email">
+			</div>
+			<div class="form-input">
+			    <label>Message:</label>
+			    <textarea name="message" rows="20" cols="100"></textarea>
+			</div>
+			<button type="submit">Send message</button>
+	    	<button type="reset">Reset</button>
+		</form>
+	</main>
+	<footer><a href="#top" title="back to top">Top</a></footer>
 </body>
 </html>
