--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<title>Elsha E. Kwee</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
+
+	<meta name="viewport" content="width=device-width", initial-scale="1.0">
 </head>
 <body>
 	<header>
