--- a/about.html
+++ b/about.html
@@ -4,18 +4,18 @@
 	<title>About &middot; Elsha E. Kwee</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 
-	<meta name="viewport" content="width=device-width", initial-scale="1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 	<header>
+		<h1>About</h1>
 		<nav id="bannernav">
 			<ul>
 				<li class="bannerlist"><a class="bannerlink" href="index.html">Home</a></li
-				><li class="bannerlist"><a class="bannerlink" href="about.html">About</a></li
+				><li id="current" class="bannerlist"><a class="bannerlink" href="about.html">About</a></li
 				><li class="bannerlist"><a class="bannerlink" href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
-		<h1>About</h1>
 	</header>
 	
 	<main>
