--- a/contact.html
+++ b/contact.html
@@ -3,17 +3,19 @@
 <head>
 	<title>Contact &middot; Elsha E. Kwee</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 	<header>
+		<h1>Contact</h1>
 		<nav id="bannernav">
 			<ul>
 				<li class="bannerlist"><a class="bannerlink" href="index.html">Home</a></li
 				><li class="bannerlist"><a class="bannerlink" href="about.html">About</a></li
-				><li class="bannerlist"><a class="bannerlink" href="contact.html">Contact</a></li>
+				><li id="current" class="bannerlist"><a class="bannerlink" href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
-		<h1>Contact</h1>
 	</header>
 	<main>
 		<form  id="main-content" name="Message form GitHub page" action="https://httpbin.org/post" method="post">
