Add more info in a little about me section

--- a/index.html
+++ b/index.html
@@ -104,7 +104,12 @@
               <div class="col-md-8 col-md-offset-2 wp1">
                 <h1 class="arrow">A little <span>about</span> me</h1><!-- Headline -->
 				<!-- about / welcome text -->
-                <p>I am a curious person who is on a journey to discover myself, with aspirations to be a lifelong learner. I love my <a href="my_dogs.jpg" target="_blank">two dogs</a>, my LEGO collection, and am currently preoccupied with improving my product management skills.</p>
+                <p>I am a curious person who is on a journey to discover myself, with aspirations to be a 
+                  lifelong learner. I love my <a href="my_dogs.jpg" target="_blank">two dogs</a>, my LEGO collection, 
+                  and am currently preoccupied with improving my product management skills.</p>
+                <p>Having spent most of my teenage years in Singapore, I still have some Singlish in me, 
+                  although it might have evolved into a new variation with an Indonesian accent. I've also lived in Seattle,
+                  Osaka, and spent a little bit of time in San Fracisco to attend a coding bootcamp.</p>
               </div>
             </div>
           </div>
