--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 				    <!-- Menu Links -->
 					<div class="icon-list">
 						<a href="index.html#home"><i class="fa fa-fw fa-home"></i><span>Home</span></a>
-						<a href="index.html#about"><i class="fa fa-fw fa-quote-left"></i><span>About</span></a>
+            <a href="index.html#about"><i class="fa fa-fw fa-quote-left"></i><span>About</span></a>
+            <a href="index.html#portfolio"><i class="fa fa-fw fa-picture-o"></i><span>Projects</span></a>
 						<a href="index.html#contact"><i class="fa fa-fw fa-envelope-o"></i><span>Contact</span></a>
 					</div>
 				</nav>
